feat: support custom billing intervals
